<resources>
    <string name="app_name">Formula One Fantasy</string>
    <string name="header_text">Formula One Fantasy</string>
    <string name="input_driver">Input Driver Name</string>
    <string name="select">SELECT</string>
    <string name="points">Points:</string>
    <string name="your_profile">YOUR PROFILE</string>
    <string name="date">Date:</string>
    <string name="input_nickname">Input your nickname</string>
    <string name="input_email">Input your e-mail</string>
    <string name="input_password">Input your password</string>
    <string name="input">INPUT</string>
    <string name="location">Location:</string>
    <string name="name">Name:</string>
    <string name="select_driver">SELECT DRIVER</string>
    <string name="sign_in">SIGN IN</string>
    <string name="login">LOG IN</string>
    <string name="register">REGISTER</string>
    <string name="back">BACK</string>
    <string name="favorite_driver">Favorite Driver:</string>
    <string name="input_favorite_driver">Input Favorite Driver:</string>
    <string name="track_info">Press here for track info!</string>
    <string name="log_out">LOG OUT</string>
</resources>